day 8 part 1 refactor